<resources>
    <string name="app_name">BankApp</string>
    <string name="bienvenido">Welcome</string>
    <string name="banco">Bank</string>
    <string name="login">Log In</string>
    <string name="passwd">Password</string>
    <string name="cuentas">Accounts</string>
    <string name="transferencias">Transfers</string>
    <string name="cambiarPasswd">Change Password</string>
    <string name="opciones">Settings</string>
    <string name="ingresos">Income</string>
    <string name="soporte">Support</string>
    <string name="oldPasswd">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="changepasswdbtn">Change</string>
    <string name="contraseñaActualizada">Password Changed Successfully</string>
    <string name="salir">Return</string>
    <string name="makeTransfer">Make Transfer</string>
    <string name="senderAcc">Sender Account:</string>
    <string name="recipientAcc">Recipient Account:</string>
    <string name="ownAcc">Own Account</string>
    <string name="foreignAcc">Foreign Account</string>
    <string name="receipt">Send Receipt</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
</resources>